[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ionwizard"
description = "Installation tools for Ionworks software"
dynamic = ["version", "readme"]
license = {file = "LICENSE.md"}
requires-python = ">=3.10"
dependencies = [
    "pyyaml",
    "platformdirs",
    "requests",
    "py-machineid",
    "toml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
]

[project.scripts]
ionwizard-library = "ionwizard.library_wizard:run"
ionwizard-container = "ionwizard.container_wizard:run"
ionwizard-install-local = "ionwizard.install_local:run"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
include = ["ionwizard"]

[tool.setuptools.dynamic]
version = {attr = "ionwizard.version.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}
