[project]
name = "ionwizard"
description = "Installation tools for Ionworks software"
dynamic = ["version", "readme"]
license = {file = "LICENSE.md"}
requires-python = ">=3.10"
dependencies = [
    "pyyaml",
    "platformdirs",
    "requests",
    "py-machineid",
    "toml",
    "pynacl",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
]

[project.scripts]
ionwizard-library = "ionwizard.library_wizard:run"
ionwizard-container = "ionwizard.container_wizard:run"
ionwizard-install = "ionwizard.install_project:run"

[tool.setuptools.packages.find]
include = ["ionwizard"]

[tool.setuptools.dynamic]
version = {attr = "ionwizard.version.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}
