[build-system]
requires = [
    "hatchling",
    "hatch-vcs",
]
build-backend = "hatchling.build"

[project]
name = "ionwizard"
description = "Installation tools for Ionworks software"
requires-python = ">=3.10"
dynamic = ["version"]
license = { file = "LICENSE.md" }
readme = {file = "README.md", content-type = "text/markdown"}
dependencies = [
    "pyyaml",
    "platformdirs",
    "requests",
    "py-machineid",
    "toml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
]

[project.scripts]
ionwizard-library = "ionwizard.library_wizard:run"
ionwizard-container = "ionwizard.container_wizard:run"
ionwizard-install = "ionwizard.install_project:run"

[tool.hatch]
version.source = "vcs"
version.fallback-version = "0.0.0"
build.hooks.vcs.version-file = "ionwizard/_version.py"
